--- a/build.xml
+++ b/build.xml
@@ -1,21 +1,21 @@
 <!-- Build file HotCiv Framework exercises.
-   
+
    Adapted for the dSoftArk course.
 
    Updated for newer libraries, Oct 2015
 
-   This source code is from the book 
+   This source code is from the book
      "Flexible, Reliable Software:
        Using Patterns and Agile Development"
      published 2010 by CRC Press.
-   Author: 
-     Henrik B Christensen 
+   Author:
+     Henrik B Christensen
      Computer Science Department
      Aarhus University
-   
-   This source code is provided WITHOUT ANY WARRANTY either 
-   expressed or implied. You may study, use, modify, and 
-   distribute it for non-commercial purposes. For any 
+
+   This source code is provided WITHOUT ANY WARRANTY either
+   expressed or implied. You may study, use, modify, and
+   distribute it for non-commercial purposes. For any
    commercial use, see http://www.baerbak.com/
 -->
 <project name="HotCiv" default="help" basedir="."
@@ -27,21 +27,21 @@
   <property name="build-directory" value="build"/>
   <property name="resource-directory" value="resource"/>
   <property name="doc-directory" value="doc"/>
-  
+
   <property name="junit.jar" value="lib/junit-4.12.jar"/>
   <property name="hamcrest.jar" value="lib/hamcrest-core-1.3.jar"/>
   <property name="minidraw.jar" value="lib/minidraw.jar"/>
 
   <!-- JaCoCo Coverage analysis -->
-  <taskdef uri="antlib:org.jacoco.ant" 
+  <taskdef uri="antlib:org.jacoco.ant"
 	   resource="org/jacoco/ant/antlib.xml">
     <classpath path="lib/jacocoant.jar"/>
   </taskdef>
 
   <property name="test-output-directory" value="TEST-RESULT"/>
-  <property name="jacoco.report.dir" 
+  <property name="jacoco.report.dir"
             value="${test-output-directory}/report" />
-  <property name="jacoco.exec" 
+  <property name="jacoco.exec"
             value="${test-output-directory}/jacoco.exec" />
 
 
@@ -82,34 +82,34 @@ HotCiv build management for dSoftArk MiniDraw Exercises
     =====
     </echo>
   </target>
-  
+
   <target name="clean">
     <delete dir="${build-directory}"/>
     <delete dir="${doc-directory}"/>
     <delete dir="${test-output-directory}"/>
   </target>
-  
+
   <target name="prepare">
     <mkdir dir="${build-directory}"/>
     <mkdir dir="${doc-directory}"/>
     <mkdir dir="${test-output-directory}"/>
   </target>
-  
+
   <target name="build-src" depends="prepare">
     <javac srcdir="${source-directory}"
 	   destdir="${build-directory}"
-	   debug="on" 
-	   includeantruntime="no" 
+	   debug="on"
+	   includeantruntime="no"
 	   >
       <classpath refid="class-path"/>
     </javac>
   </target>
-  
+
   <target name="build-test" depends="build-src">
     <javac srcdir="${test-source-directory}"
 	   destdir="${build-directory}"
 	   debug = "on"
-	   includeantruntime="no" 
+	   includeantruntime="no"
 	   >
       <classpath refid="class-path"/>
     </javac>
@@ -122,7 +122,7 @@ HotCiv build management for dSoftArk MiniDraw Exercises
       </fileset>
     </copy>
   </target>
-  
+
   <target name="build-all" depends="build-src,build-test,copy-resource"/>
 
   <target name="mkdirdoc">
@@ -139,19 +139,19 @@ HotCiv build management for dSoftArk MiniDraw Exercises
       doctitle="&lt;b&gt;HotCiv&lt;/b&gt;"
       bottom="&lt;b&gt;Skeleton code authored by Henrik B. Christensen &lt;/b&gt;"
       windowtitle="HotCiv" >
-      <sourcepath> 
-	<pathelement path="${source-directory}"/> 
+      <sourcepath>
+	<pathelement path="${source-directory}"/>
       </sourcepath>
-      <classpath> 
-	<path refid="class-path"/> 
+      <classpath>
+	<path refid="class-path"/>
       </classpath>
     </javadoc>
   </target>
 
   <!-- JUnit testing -->
   <target name="test"  depends="build-all">
-    <junit printsummary="yes" 
-           fork="yes" 
+    <junit printsummary="yes"
+           fork="yes"
 	   forkmode="once"
 	   haltonfailure="yes">
       <formatter type="plain"/>
@@ -167,7 +167,7 @@ HotCiv build management for dSoftArk MiniDraw Exercises
   <!-- Run JUnit with JaCoCo code coverage -->
   <target name="run.junit" depends="build-all">
     <jacoco:coverage destfile="${jacoco.exec}" >
-      <junit printsummary="yes" fork="yes" 
+      <junit printsummary="yes" fork="yes"
 	     forkmode="once"
 	     haltonfailure="yes">
 	<formatter type="plain"/>
@@ -278,7 +278,11 @@ HotCiv build management for dSoftArk MiniDraw Exercises
   </target>
 
   <target name="semi" depends="build-all">
-    <echo message="*** Placeholder for your Semi task ***"/>
+    <java fork="yes" classname="hotciv.visual.ShowSemiCiv">
+      <classpath>
+    <path refid="class-path"/>
+      </classpath>
+    </java>
   </target>
 
 </project>
